--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             align-items: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             z-index: 1000; /* Garante que fique acima dos outros elementos */
+            flex-wrap: wrap; /* Permite quebra de linha */
         }
 
         .header .logo img {
-            vertical-align: middle; /* Alinha as imagens verticalmente */
-            height: 50px; /* Ajuste o tamanho das imagens */
+            height: 50px; /* Tamanho padrão das imagens */
         }
 
         .header .title {
@@ -39,12 +39,34 @@
             font-weight: bold;
             color: white;
             text-transform: uppercase;
+            white-space: nowrap; /* Impede a quebra de linha */
+            overflow: hidden; /* Esconde o texto que ultrapassar */
+            text-overflow: ellipsis; /* Adiciona "..." se o texto for muito longo */
+            max-width: 100%; /* Limita a largura do título */
+        }
+
+        /* Ajustes para telas menores */
+        @media (max-width: 768px) {
+            .header {
+                flex-direction: column; /* Coloca os elementos em uma coluna */
+                padding: 10px;
+                gap: 10px; /* Reduz o espaço entre os elementos */
+            }
+
+            .header .logo img {
+                height: 40px; /* Reduz o tamanho das imagens */
+            }
+
+            .header .title {
+                font-size: 18px; /* Reduz o tamanho da fonte do título */
+                margin: 5px 0; /* Adiciona um pequeno espaço entre os elementos */
+            }
         }
 
         /* Barra de pesquisa fixa */
         .search-container {
             position: fixed;
-            top: 70px; /* Ajuste para colar logo abaixo da barra verde */
+            top: 80px; /* Ajuste inicial para telas maiores */
             left: 0;
             right: 0;
             background-color: #e0f7e0; /* Verde claro */
@@ -53,6 +75,13 @@
             display: flex;
             justify-content: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Ajuste da posição da barra de pesquisa em telas menores */
+        @media (max-width: 768px) {
+            .search-container {
+                top: 140px; /* Ajuste para telas menores */
+            }
         }
 
         #search-input {
@@ -71,7 +100,14 @@
         /* Container principal */
         .container {
             padding: 20px;
-            margin-top: 130px; /* Espaço para a barra verde e a barra de pesquisa fixas */
+            margin-top: 160px; /* Espaço para a barra verde e a barra de pesquisa fixas */
+        }
+
+        /* Ajuste do margin-top do container em telas menores */
+        @media (max-width: 768px) {
+            .container {
+                margin-top: 200px; /* Ajuste para telas menores */
+            }
         }
 
         /* Cards de livros */
