--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         /* Ajustes para telas menores */
         @media (max-width: 768px) {
             .header {
-                flex-direction: column; /* Coloca os elementos em uma coluna */
+                flex-direction: row; /* Mantém os logotipos lado a lado */
+                align-items: flex-start; /* Alinha os logotipos no topo */
                 padding: 10px;
-                gap: 10px; /* Reduz o espaço entre os elementos */
             }
 
             .header .logo img {
@@ -59,7 +59,18 @@
 
             .header .title {
                 font-size: 18px; /* Reduz o tamanho da fonte do título */
-                margin: 5px 0; /* Adiciona um pequeno espaço entre os elementos */
+                margin: 10px 0; /* Adiciona espaço acima e abaixo do título */
+                width: 100%; /* Ocupa a largura total */
+                text-align: center; /* Centraliza o título */
+                order: 1; /* Coloca o título abaixo dos logotipos */
+            }
+
+            .header .logo:first-child {
+                margin-right: auto; /* Logotipo da biblioteca à esquerda */
+            }
+
+            .header .logo:last-child {
+                margin-left: auto; /* Logotipo da escola à direita */
             }
         }
 
