--- a/index.html
+++ b/index.html
@@ -184,6 +184,382 @@
     <script>
         const books = [
     {
+        "title": "Helena",
+        "author": "Machado de Assis",
+        "isbn": "9788585030001",
+        "publisher": "Brink Brasil",
+        "year": "2018",
+        "genre": "Romance"
+    },
+    {
+        "title": "Poemas Escolhidos",
+        "author": "Mia Couto",
+        "isbn": "9788535926842",
+        "publisher": "Companhia das Letras",
+        "year": "2016",
+        "genre": "Poesia"
+    },
+    {
+        "title": "O Melhor do Conto Brasileiro",
+        "author": "Aníbal Machado, Josué Montello, Rachel de Queiroz, Orígenes Lessa",
+        "isbn": "9788503000505",
+        "publisher": "José Olympio Editora",
+        "year": "1970",
+        "genre": "Contos"
+    },
+    {
+        "title": "Inocência",
+        "author": "Visconde de Taunay",
+        "isbn": "9788587653673",
+        "publisher": "ABC",
+        "year": "2002",
+        "genre": "Romance"
+    },
+    {
+        "title": "A Pata da Gazela",
+        "author": "José de Alencar",
+        "isbn": "9788587653901",
+        "publisher": "Saraiva",
+        "year": null,
+        "genre": "Romance"
+    },
+    {
+        "title": "Vito Grandam: Uma História de Voz",
+        "author": "Ziraldo, Pedro Bandeira (Apresentação), Walter Weiszflog (Organizador)",
+        "isbn": "9788506041055",
+        "publisher": null,
+        "year": null,
+        "genre": "Literatura Infantojuvenil"
+    },
+    {
+        "title": "De Gutenberg à Internet: direitos autorais na era digital",
+        "author": "Henrique Gandelman",
+        "isbn": "9788501078919",
+        "publisher": "Record",
+        "year": "2007",
+        "genre": "Direito Autoral"
+    },
+    {
+        "title": "Por Um Novo Reformismo",
+        "author": "Giuseppe Vacca, Luiz Sergio Henriques",
+        "isbn": "9788589216173",
+        "publisher": "Henriques, Luiz Sergio, Brazil",
+        "year": "2009",
+        "genre": "Política"
+    },
+    {
+        "title": "Conterrâneos",
+        "author": "Jansen Viana",
+        "isbn": "9788587062888",
+        "publisher": "Banco do Nordeste",
+        "year": "2007",
+        "genre": "Poesia"
+    },
+    {
+        "title": "Whatever",
+        "author": "Leonardo Brasiliense",
+        "isbn": "9788574211244",
+        "publisher": "Artes e Ofícios",
+        "year": "2009",
+        "genre": "Literatura Contemporânea"
+    },
+    {
+        "title": "Contos e Crônicas Para Ler Na Escola",
+        "author": "Moacyr Scliar",
+        "isbn": "9788539002733",
+        "publisher": "Objetiva",
+        "year": "2011",
+        "genre": "Contos"
+    },
+    {
+        "title": "Os Melhores Contos de Cães & Gatos",
+        "author": "Flávio Moreira da Costa",
+        "isbn": "9788500021985",
+        "publisher": "Ediouro",
+        "year": "2007",
+        "genre": "Contos"
+    },
+    {
+        "title": "A Prosa do Mundo",
+        "author": "Caio Fernando Abreu, José Castello, Carlos Drummond de Andrade, Moacyr Scliar, Cecília Meireles, Ignácio de Loyola Brandão, Luiz Vilela, Mário Quintana, Rachel de Queiroz",
+        "isbn": "9788575550175",
+        "publisher": "Gaia",
+        "year": "2008",
+        "genre": "Contos e Crônicas"
+    },
+    {
+        "title": "Contos tradicionais do Brasil para jovens",
+        "author": "Luís da Câmara Cascudo",
+        "isbn": "9788526011205",
+        "publisher": null,
+        "year": "2006",
+        "genre": "Contos"
+    },
+    {
+        "title": "O Conto da Mulher Brasileira",
+        "author": "Vários Autores",
+        "isbn": "9788526012578",
+        "publisher": "Global",
+        "year": "2008",
+        "genre": "Contos"
+    },
+    {
+        "title": "Contos Tradicionais do Brasil",
+        "author": "Luís da Câmara Cascudo",
+        "isbn": "9788526006850",
+        "publisher": "Global Editora",
+        "year": "2005",
+        "genre": "Contos"
+    },
+    {
+        "title": "Kuriquiã, o romance das águas lendárias",
+        "author": "Almir Gomes de Castro",
+        "isbn": "9788575646359",
+        "publisher": null,
+        "year": "2013",
+        "genre": "Romance"
+    },
+    {
+        "title": "O barril de Amontillado e O demônio da Perversidade",
+        "author": "Edgar Allan Poe, Rodrigo Espinosa Cabral",
+        "isbn": "9788533907492",
+        "publisher": "Rideel",
+        "year": "2005",
+        "genre": "Contos"
+    },
+    {
+        "title": "Antologia de folhetos de cordel",
+        "author": "Márcia Abreu",
+        "isbn": "9788516047610",
+        "publisher": "Moderna",
+        "year": "2005",
+        "genre": "Cordel"
+    },
+    {
+        "title": "O albatroz azul",
+        "author": "João Ubaldo Ribeiro",
+        "isbn": "9788520923863",
+        "publisher": "Nova Fronteira",
+        "year": "2009",
+        "genre": "Romance"
+    },
+    {
+        "title": "Contos de Mirábile",
+        "author": "Édimo de Almeida Pereira",
+        "isbn": "9788571604001",
+        "publisher": "Mazza",
+        "year": "2007",
+        "genre": "Contos"
+    },
+    {
+        "title": "A Madona de Cedro",
+        "author": "Antonio Callado",
+        "isbn": "9788578600846",
+        "publisher": "Vida Melhor",
+        "year": "2012",
+        "genre": "Romance"
+    },
+    {
+        "title": "Para Gostar de Ler - Volume 7 - Crônicas 6",
+        "author": "Carlos Eduardo Novaes, José Carlos Oliveira, Lourenço Diaféria, Luis Fernando Verissimo",
+        "isbn": "9788508083008",
+        "publisher": "Ática",
+        "year": "2005",
+        "genre": "Crônicas"
+    },
+    {
+        "title": "Janela Mágica",
+        "author": "Cecília Meireles",
+        "isbn": "9788516034900",
+        "publisher": "Moderna",
+        "year": null,
+        "genre": "Poesia"
+    },
+    {
+        "title": "Cânticos",
+        "author": "Cecília Meireles",
+        "isbn": "9788516034832",
+        "publisher": "Moderna",
+        "year": "2003",
+        "genre": "Poesia"
+    },
+    {
+        "title": "A Morte e a Morte de Quincas Berro D'água",
+        "author": "Jorge Amado",
+        "isbn": "9788501004840",
+        "publisher": "Editora Afiliada",
+        "year": "1999",
+        "genre": "Romance"
+    },
+    {
+        "title": "O Coronel e o Lobisomem",
+        "author": "José Cândido de Carvalho",
+        "isbn": "9788503009805",
+        "publisher": "José Olympio",
+        "year": "1994",
+        "genre": "Romance"
+    },
+    {
+        "title": "Os Melhores Poemas de Mário Quintana",
+        "author": "Mário Quintana",
+        "isbn": "9788526001725",
+        "publisher": "Global",
+        "year": "2000",
+        "genre": "Poesia"
+    },
+    {
+        "title": "Um Hóspede na Sacada",
+        "author": "Liberato Vieira da Cunha",
+        "isbn": "9788520500910",
+        "publisher": "Sulina",
+        "year": "1997",
+        "genre": "Literatura"
+    },
+    {
+        "title": "Contos de Aprendiz",
+        "author": "Carlos Drummond de Andrade",
+        "isbn": "9788501062659",
+        "publisher": "Editora José Olympio",
+        "year": "1976",
+        "genre": "Contos"
+    },
+    {
+        "title": "Vozes da Ficção. Narrativas do Mundo do Trabalho",
+        "author": "Walnice Nogueira Galvão",
+        "isbn": "9788577431830",
+        "publisher": "Expressão Popular",
+        "year": "2011",
+        "genre": "Contos"
+    },
+    {
+        "title": "De Conto em Conto",
+        "author": "Antônio de Alcântara Machado, Artur Azevedo, Carlos Drummond de Andrade, Fernando Sabino, Ivan Ângelo, Lima Barreto, Luiz Vilela, Lygia Fagundes Telles, Machado de Assis, Marcos Rey, Pedro Bandeira, Wander Piroli",
+        "isbn": "9788508082711",
+        "publisher": "Editora Ática",
+        "year": "2002",
+        "genre": "Contos"
+    },
+    {
+        "title": "Contos novos",
+        "author": "Mário de Andrade",
+        "isbn": "9788500027390",
+        "publisher": "Ediouro",
+        "year": "2012",
+        "genre": "Contos"
+    },
+    {
+        "title": "Várias Histórias",
+        "author": "Machado de Assis",
+        "isbn": "9788589155427",
+        "publisher": "Germape",
+        "year": "2005",
+        "genre": "Contos"
+    },
+    {
+        "title": "Contos",
+        "author": "Guy de Maupassant",
+        "isbn": "9788575301609",
+        "publisher": "Cedic",
+        "year": "2009",
+        "genre": "Contos"
+    },
+    {
+        "title": "Meu Planeta Minha Casa",
+        "author": "Shirley Souza",
+        "isbn": "9788576667933",
+        "publisher": "Escala Educacional",
+        "year": "2000",
+        "genre": "Ecologia"
+    },
+    {
+        "title": "Olhos de Ver",
+        "author": "Tatiana Belinky",
+        "isbn": "9788516041953",
+        "publisher": "Editora Moderna",
+        "year": "2004",
+        "genre": "Crônicas"
+    },
+    {
+        "title": "Tudos",
+        "author": "Arnaldo Antunes, Loretta Emiri",
+        "isbn": "9788585219208",
+        "publisher": "Iluminuras",
+        "year": "1990",
+        "genre": "Poesia"
+    },
+    {
+        "title": "Poemas de Gregório de Matos",
+        "author": "Gregório de Matos",
+        "isbn": "9788586583117",
+        "publisher": "Autêntica",
+        "year": "1998",
+        "genre": "Poesia"
+    },
+    {
+        "title": "Breve História do Mundo",
+        "author": "Carlos Nejar",
+        "isbn": "9788500013256",
+        "publisher": "Ediouro",
+        "year": "2003",
+        "genre": "História"
+    },
+    {
+        "title": "Memórias Póstumas de Brás Cubas",
+        "author": "Machado de Assis",
+        "isbn": "9788589155151",
+        "publisher": "Germape",
+        "year": "2004",
+        "genre": "Romance"
+    },
+    {
+        "title": "Ortografia: Ensinar e Aprender",
+        "author": "Desconhecido",
+        "isbn": "9788508071890",
+        "publisher": "Ática",
+        "year": "1998",
+        "genre": "Educação"
+    },
+    {
+        "title": "200 Dias de Leitura e Escrita na Escola",
+        "author": "Rossana Ramos",
+        "isbn": "9788524911446",
+        "publisher": "Cortez",
+        "year": "2005",
+        "genre": "Educação"
+    },
+    {
+        "title": "Leitura e Escrita de Adolescentes na Internet e na Escola",
+        "author": "Maria Teresa de Assunção Freitas",
+        "isbn": "9788575261569",
+        "publisher": "Autêntica Editora",
+        "year": "2005",
+        "genre": "Educação"
+    },
+    {
+        "title": "Mestres da paixão: aprendendo com quem ama o que faz",
+        "author": "Domingos Pellegrini",
+        "isbn": "9788575681398",
+        "publisher": "Salamandra",
+        "year": "2021",
+        "genre": "Educação"
+    },
+    {
+        "title": "O castelo ao lado",
+        "author": "Edith Lacerda",
+        "isbn": "9786589755029",
+        "publisher": "Sandra Edições",
+        "year": "2021",
+        "genre": "Literatura"
+    },
+    {
+        "title": "O Sítio dos Bichos",
+        "author": "George Orwell",
+        "isbn": "9786559490646",
+        "publisher": "Carochinha",
+        "year": "2021",
+        "genre": "Fábula"
+    },
+    {
         "title": "Instalações Elétricas",
         "author": "Ademaro A. M. B. Cotrim",
         "isbn": "9788576052081",
